--- a/redditCloneFrontend/src/app/header/header.component.html
+++ b/redditCloneFrontend/src/app/header/header.component.html
@@ -18,7 +18,7 @@
         <div class="flex-grow-1 float-end">          
             <div>
                 <a routerLink="/sign-up" class="float-end sign-up me-2">Sign up</a>
-                <a href="https://www.youtube.com/" class="float-end login me-2">Login</a>
+                <a href="/login" class="float-end login me-2">Login</a>
             </div>
         </div>
     </nav>
