--- a/redditCloneFrontend/src/app/post/create-post/create-post.component.html
+++ b/redditCloneFrontend/src/app/post/create-post/create-post.component.html
@@ -1,1 +1,31 @@
-<p>create-post works!</p>
+<div class="container">
+    <div class="row">
+      <hr />
+      <div class="create-post-container col-md-9">
+        <form class="post-form" [formGroup]="createPostForm">
+          <div class="form-group">
+            <div class="create-post-heading">Create Post</div>
+            <hr />
+            <input type="text" [formControlName]="'postName'" class="form-control" style="margin-top: 5px"
+              placeholder="Title">
+  
+            <input type="text" class="form-control" [formControlName]="'url'" style="margin-top: 5px" placeholder="URL">
+  
+            <select class="form-control" style="margin-top: 10px" [formControlName]="'subredditName'">
+              <option value="" selected disabled>Select Subreddit</option>
+              <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
+            </select>
+  
+            <textarea class="form-control" [formControlName]="'description'" style="margin-top: 5px" placeholder="Write a post..."></textarea>
+            <span>
+              <div style="margin-top: 5px" class="float-right">
+                <button (click)="discardPost()" class="btnDiscard">Discard</button>
+                <button (click)="createPost()"
+  class="btnCreatePost">Post</button>
+              </div>
+            </span>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
