--- a/redditCloneFrontend/src/app/auth/user-profile/user-profile.component.html
+++ b/redditCloneFrontend/src/app/auth/user-profile/user-profile.component.html
@@ -1,17 +1,17 @@
 <div class="container">
     <div>
-      Welcome <b>{{name}}</b>.<br /> You have posted <b>{{postLength}}</b> time(s) and commented
+      <br /> <b>{{name}}</b> posted <b>{{postLength}}</b> time(s) and commented
       <b>{{commentLength}}</b> time(s).
-      You can check your post and comment history below.
+      You can check post and comment history below.
     </div>
     <hr />
     <div>
-      Your Posts:
+      <b>{{name}}</b> Posts:
     </div>
     <app-post-tile [posts]="posts"></app-post-tile>
     <hr />
     <div>
-      Your Comments:
+      <b>{{name}}</b> Comments:
     </div>
     <div *ngFor="let comment of comments">
       <div class="comment">
