--- a/redditCloneFrontend/src/app/post/create-post/create-post.component.html
+++ b/redditCloneFrontend/src/app/post/create-post/create-post.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
       <hr />
-      <div class="create-post-container col-md-9">
+      <div class="create-post-container">
         <form class="post-form" [formGroup]="createPostForm">
           <div class="form-group">
             <div class="create-post-heading">Create Post</div>
@@ -16,12 +16,11 @@
               <option *ngFor="let subreddit of subreddits">{{subreddit.name}}</option>
             </select>
   
-            <textarea class="form-control" [formControlName]="'description'" style="margin-top: 5px" placeholder="Write a post..."></textarea>
+            <textarea class="form-control" [formControlName]="'description'" style="margin-top: 5px" placeholder="Write a post..." rows="7"></textarea>
             <span>
-              <div style="margin-top: 5px" class="float-right">
+              <div style="margin-top: 5px;" class="d-flex justify-content-center">
                 <button (click)="discardPost()" class="btnDiscard">Discard</button>
-                <button (click)="createPost()"
-  class="btnCreatePost">Post</button>
+                <button (click)="createPost()" class="btnCreatePost">Post</button>
               </div>
             </span>
           </div>
