--- a/redditCloneFrontend/src/app/shared/post-tile/post-tile.component.html
+++ b/redditCloneFrontend/src/app/shared/post-tile/post-tile.component.html
@@ -1,12 +1,12 @@
 <!-- Display Posts-->
 <div class="row post" *ngFor="let post of posts">
-    <app-vote-button [post]="post"></app-vote-button>
+    <app-vote-button [post]="post" class="col-md-1"></app-vote-button>
     <!-- Section to Display Post Information-->
     <div class="col-md-11">
       <span class="subreddit-info">
         <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subredditName}}</a></span>
-        <span> . Posted by <a class="username" routerLink="/user/{{post.userName}}">{{post.userName}}</a></span>
-        <span> . {{post.duration}}</span>
+        <span>. Posted by <a class="username" routerLink="/user-profile/{{post.userName}}">{{post.userName}}</a></span>
+        <span>. {{post.duration}}</span>
       </span>
       <hr />
       <div class="post-title">
@@ -17,7 +17,7 @@
       </div>
       <hr />
       <span>
-        <a class="btnCommments" role="button">
+        <a class="btnCommments" role="button" (click)="goToPost(post.id)">
           <fa-icon [icon]="faComments"></fa-icon>
           Comments({{post.commentCount}})
         </a>
