--- a/redditCloneFrontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
+++ b/redditCloneFrontend/src/app/subreddit/create-subreddit/create-subreddit.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="create-subreddit-container">
+    <div class="create-subreddit-container col-md-9">
       <form class="post-form" [formGroup]="createSubredditForm">
         <div class="form-group">
           <div class="create-subreddit-heading">Create Subreddit</div>
@@ -8,9 +8,9 @@
           <input type="text" [formControlName]="'title'" class="form-control" style="margin-top: 5px"
                  placeholder="Title">
           <textarea type="text" [formControlName]="'description'" style="width: 100%; margin-top: 5px"
-                    placeholder="Description"></textarea>
+                    placeholder="Description" class="form-control"></textarea>
           <div>
-            <div style="margin-top: 5px" class="float-right">
+            <div style="margin-top: 10px" class="d-flex justify-content-center">
               <button (click)="discard()" class="btnDiscard">Discard</button>
               <button (click)="createSubreddit()" class="btnCreateSubreddit">Create</button>
             </div>
