Added view-subreddit components, small fixes

--- a/redditCloneFrontend/src/app/shared/post-tile/post-tile.component.html
+++ b/redditCloneFrontend/src/app/shared/post-tile/post-tile.component.html
@@ -4,7 +4,7 @@
     <!-- Section to Display Post Information-->
     <div class="col-md-11">
       <span class="subreddit-info">
-        <span class="subreddit-text"><a class="posturl" routerLink="">{{post.subredditName}}</a></span>
+        <span class="subreddit-text"><a class="posturl" routerLink="/list-subreddits">{{post.subredditName}}</a></span>
         <span>. Posted by <a class="username" routerLink="/user-profile/{{post.userName}}">{{post.userName}}</a></span>
         <span>. {{post.duration}}</span>
       </span>
