--- a/redditCloneFrontend/src/app/subreddit/view-subreddit/view-subreddit.component.css
+++ b/redditCloneFrontend/src/app/subreddit/view-subreddit/view-subreddit.component.css
@@ -1,6 +1,5 @@
-.sidebar-view-subreddit {
+.side-details {
     width: 312px;
-    height: 280px;
     --post-line-color: #ccc;
     border: 1px solid #ccc;
     margin-bottom: 10px;
