--- a/redditCloneFrontend/src/app/subreddit/list-subreddits/list-subreddits.component.html
+++ b/redditCloneFrontend/src/app/subreddit/list-subreddits/list-subreddits.component.html
@@ -4,6 +4,7 @@
     <div class="col-md-9">
       <h2>List of Subreddits</h2>
       <ul>
+        <li><a routerLink="/">All</a></li>
         <li *ngFor="let subreddit of subreddits">
           <a routerLink="/view-subreddit/{{subreddit.id}}">{{subreddit.name}}</a>
         </li>
